--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,22 @@
 
 	<build>
 		<plugins>
+
+			<!--<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>8.5.13</version>
+				<configuration>
+					<user>DoctorStrange</user>
+					<password>stranger</password>
+					<schemas>
+						<schema>Personaggi</schema>
+						<schema>Abilita</schema>
+						<schema>Film</schema>
+					</schemas>
+				</configuration>
+			</plugin>-->
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
