Aggiunti file configurazione per FlyWay più aggiunta file di Script sql per l'aggiunta delle tabelle personaggi, film, abilita

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<flyway.user>doctorstrange</flyway.user>
+		<flyway.password>stranger</flyway.password>
+		<flyway.schemas>javamarvelexample</flyway.schemas>
+		<flyway.url>jdbc:h2:mem:javamarvelexample</flyway.url>
+		<flyway.locations>filesystem:db/migration</flyway.locations>
 	</properties>
 	<dependencies>
 		<dependency>
