Modifica script SQL, Aggiunti campi nel file properties per risolvere problema della creazione tabelle, create entita, spostamento folder db/migration

--- a/flywayPersonal.conf
+++ b/flywayPersonal.conf
@@ -1,5 +1,5 @@
-flyway.user=doctorstrange
-flyway.password=stranger
+flyway.user=sa
+flyway.password=password
 flyway.schemas=javamarvelexample
 flyway.url=jdbc:h2:mem:javamarvelexample
 flyway.locations=filesystem:db/migration
