--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,17 @@
-spring.datasource.url=jdbc:h2:mem:javamarvelexample
+spring.datasource.url=jdbc:h2:mem:javamarvelexample;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=doctorstrange
-spring.datasource.password=stranger
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.flyway.enabled=true
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.path=/h2console/
+spring.h2.console.enabled=true
+
+flyway.baselineOnMigrate=true
+flyway.locations=filesystem:/db/migrations
