Modifica script SQL - Modifica sulle entita il nome e la joinColumn corrette - Cambiate sulle entita tutti i package -> jakarta.persixtence - Aggiunto nella classe main la stampa per i personaggi a partire da un nome - aggiunto il repository e il service della classe Personaggi - Modificato l'attributo spring.jpa.hibernate.ddl-auto=validate -> hibernate.hbm2ddl.auto = validate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.password=password
 spring.flyway.enabled=true
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=validate#
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+hibernate.hbm2ddl.auto = validate
 
 spring.h2.console.path=/h2console/
 spring.h2.console.enabled=true
